# Trabalho-Final

./: README.md  cluster.md  dockers.txt
grpc/: aquecimento-resultado.json  carga-media-resultado.json  docker-compose.yml  dockers.txt  estresse-resultado.json  load-test.js
grpc/A-cpp/: CMakeLists.txt  Dockerfile  servera.cc  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
grpc/A-py/: Dockerfile  requirements.txt  servera.py  service_pb2_grpc.py
grpc/B-py/: Dockerfile  requirements.txt  serverb.py  service_pb2.py  service_pb2_grpc.py
grpc/P-nodejs/: Dockerfile  package-lock.json  package.json  server.js
grpc/Testes/testes-cluster/: cenários.txt  load-test.js  texto-grande.txt
grpc/Testes/testes-cluster/cenario-2/: carga-alta-cenario-2.json
grpc/Testes/testes-cluster/cenario-3/: carga-alta-cenario3.json
grpc/Testes/testes-cluster/cenario-4/: cenario4.json
grpc/k8s/: a-deploy.yaml  a-svc.yaml  b-deploy.yaml  b-svc.yaml  namespace.yaml  p-deploy.yaml  p-svc.yaml
grpc/proto/: service.proto
grpc/testes-docker/: carga-alta.json  carga-media.json  carga-pequena.json  load-test.js  testes.txt
rest/: aquecimento-resultado.json  carga-media-resultado.json  docker-compose.yml  estresse-resultado.json  load-test.js
rest/A-cpp-rest/: Dockerfile  servera_rest.cpp
rest/A-py-rest/: Dockerfile  servera_rest.py
rest/B-py-rest/: Dockerfile  serverb_rest.py
rest/P-nodejs-rest/: Dockerfile  package-lock.json  package.json  service.js
rest/k8s/: a-deploy.yaml  a-svc.yaml  b-deploy.yaml  b-svc.yaml  namespace.yaml  p-deploy.yaml  p-svc.yaml
(+3 files in other folders)
